<resources>
    <string name="app_name">CST2335FinalProject</string>
    <string name="Final_Project">Final Project</string>

    <string name="sunrise_sunset_lookup">Sunrise &amp; Sunset Lookup</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="dictionary_api">Dictionary API</string>
    <string name="deezer_song_search_api">Deezer Song Search API</string>

    <string name="hint_enter_word">Enter a word</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="save_all">Save All</string>
    <string name="go_to_saved">Go to Saved Words</string>
    <string name="go_back">Go Back</string>
    <string name="delete_selected">Delete Selected</string>

    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">1. Search: Type the word you want to look up in the search bar and tap \'Search\'.\n2. View Definitions: Definitions and related information will appear below the search bar.\n3. Save All: Tap the \'Save All\' button to save all definitions for the searched word.\n4. Go to Saved Words: Tap to view saved words and their definitions.\n5. Delete: In the saved words view, select the words you wish to delete and tap \'Delete Selected\'.</string>

    <string name="please_enter_a_word">Please enter a word to search.</string>
    <string name="definition_saved">Definition saved.</string>
    <string name="words_deleted">Selected words deleted.</string>

    <string name="error_fetching_definitions">Error fetching definitions: %1$s</string>
    <string name="error_parsing_json_response">Error parsing JSON response: %1$s</string>


    <string name="typeArtistName">type artist name</string>
    <string name="duration">Duration Detail</string>
    <string name="title">Title Detail</string>
    <string name="albumNameDetail">Album Name Detail</string>
    <string name="addFavorite">ADD FAVORITE</string>
    <string name="showFavorites">SHOW FAVORITES</string>
    <string name="deleteFavorite">DELETE FAVORITE</string>
    <string name="albumCover">Album cover</string>
    <string name="searchButton">SEARCH</string>
    <string name="OK">OK</string>
    <string name="help_title">Help</string>
    <string name="instructions">Instructions:Search artist for list of songs to see details or add to favorites.</string>
    <string name="itemClicked">Item clicked: </string>
    <string name="songAdded">Song added into favorites</string>
    <string name="songAlreadyExist">Song already in favorites</string>
    <string name="songDeleted">Song deleted from favorites</string>
    <string name="enterLettersOnly">Please enter letters only</string>
    <string name="validationPassed">Validation passed</string>
    <string name="validation">Validation</string>


    <!--recipe search-->
    <string name="Lookup" translatable="false">Lookup</string>
    <string name="recipe_validate_error_msg">Your enter text is not validate</string>
    <string name="recipe_validate_correct_msg">Your enter text is validate</string>
    <string name="recipe_save_alert">Do you want to save as favorite?</string>
    <string name="recipe_no">NO</string>
    <string name="recipe_yes">YES</string>
    <string name="recipe_add_alert">You add it to your Favorites.</string>
    <string name="recipe_search_hint">Enter Here</string>
    <string name="recipe_search_button">SEARCH</string>
    <string name="view_favorite_recipes_button">SAVED FAVORITE RECIPES</string>
    <string name="recipe_source_url">Source Url</string>
    <string name="recipe_result_title">Result Title</string>
    <string name="recipe_remove_button">REMOVE</string>
    <string name="recipe_remove_all">Do you want to clear all?</string>
    <string name="recipe_clear_confirm">You already deleted all of your saved recipes</string>
    <string name="recipe_remove_alert">Do you want to remove from saved?</string>
    <string name="removed_alert">Deleted from your saved</string>
    <string name="recipe_delete_all">Delete all saved recipe</string>
    <string name="recipe_help">Recipe Instruction</string>
    <string name="recipe_help_content">Click to show each recipe\'s Image, Summary and the source URL.          \n\n\"YES\" to remove from saved; \"NO\" to cancel.          \n\nThere is a garage icon in the up-right corner can clear all you saved.</string>
    <string name="recipe_json_array_name" translatable="false">results</string>
    <string name="recipe_json_title" translatable="false">title</string>
    <string name="recipe_json_image" translatable="false">image</string>
    <string name="recipe_json_id" translatable="false">id</string>
    <string name="recipe_web_response">"Response: "</string>
    <string name="recipe_utf_8" translatable="false">UTF-8</string>
    <string name="recipe_search_content">SearchText</string>
    <string name="error_encoding_recipe_name">Error encoding recipe name</string>
    <string name="recipe_id" translatable="false">ID</string>
    <string name="recipe_title">Title</string>
    <string name="enterRecipeSearchText">Please enter</string>
    <string name="recipe_search_text_contain_special_character">Search text contain special character</string>


    <!-- Sunrise Sunset lookup -->
    <!-- Showcase title -->
    <string name="showCase">Sunrise &amp; Sunset Showcase</string>
    <string name="showDate">Date &amp; Time: </string>
    <string name="showSunrise">Sunrise time: </string>
    <string name="showSunset">Sunset time: </string>
    <string name="showLatitude">Latitude: </string>
    <string name="showLongitude">Longitude: </string>"

    <!-- Show case Resault -->
    <string name="resault_date_time">Date &amp; Time: %s</string>
    <string name="resault_sunrise">Sunrise: %s</string>
    <string name="resault_sunset">Sunset: %s</string>
    <string name="resault_latitude">Latitude: %s</string>
    <string name="resault_longitude">Longitude: %s</string>

    <!--Buttons -->
    <string name="lookUpButton">Lookup</string>
    <string name="favouriteButton">Favourite Location</string>
    <string name="saveLocationButton">Add to Favourite</string>
    <string name="deleteButton">Delete</string>

    <!-- Latitude, Longitude Format -->
    <string name="hintLatitude">* Latitude input with 5 digits.</string>
    <string name="hintLongitude">* Longitude input with 6 digits.</string>

    <!-- Latitude, Longitude Hint -->
    <string name="enterLongitude">Enter the longitude</string>
    <string name="enterLatitude">Enter the latitude</string>

    <!-- favourite_item -->
    <string name="favouriteList">Favourite Location List</string>
    <string name="tvDate">Current Date &amp; Time:  </string>
    <string name="tvSunrise"> %s </string>
    <string name="tvSunset"> %s </string>
    <string name="tvLatitude"> Latitude: </string>
    <string name="tvLongitude"> longitude: </string>

    <!-- Toast, Snackbar, AlertDialog -->
    <string name="invalidLatitude">Invalid Latitude, please enter again!</string>
    <string name="invalidLongitude">Invalid Longitude, please enter again!</string>
    <string name="locationAddedSuccessfully">Location Added Successfully!</string>
    <string name="deleteLocationAlert">Do you want to delete this location?</string>
    <string name="new_location_added">New location added!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sunHelp">This App is for check Sunrise and Sunset time. Follow the hint to enter Latitude and longitude. You will see the result in the showcase after click LOOKUP.</string>
    <string name="location" translatable="false">" "</string>


</resources>

