<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar with title, up button, and dropdown list -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetails"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/deezer_song_search_api"
        app:titleTextColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSongTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetails" />

    <TextView
        android:id="@+id/tvSongDurationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongTitleDetail" />

    <TextView
        android:id="@+id/tvSongAlbumNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:text="@string/albumNameDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongDurationDetail" />

    <ImageView
        android:id="@+id/ivSongAlbumCoverDetail"
        android:contentDescription="@string/albumCover"
        android:layout_width="46dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="185dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongAlbumNameDetail"
        app:srcCompat="@drawable/song" />

    <Button
        android:id="@+id/btnAddFavorite"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="150dp"
        android:text="@string/addFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShowFavorites"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="80dp"
        android:text="@string/showFavorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteFavorite"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:text="@string/deleteFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddFavorite" />


</androidx.constraintlayout.widget.ConstraintLayout>