<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="78dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvDate"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tvSunrise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvSunrise"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvSunset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvSunset"
        app:layout_constraintEnd_toEndOf="@+id/tvSunrise"
        app:layout_constraintStart_toStartOf="@+id/tvSunrise"
        app:layout_constraintTop_toBottomOf="@+id/tvSunrise" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvLatitude"
        app:layout_constraintEnd_toEndOf="@+id/tvSunset"
        app:layout_constraintStart_toStartOf="@+id/tvSunset"
        app:layout_constraintTop_toBottomOf="@+id/tvSunset" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvLongitude"
        app:layout_constraintEnd_toEndOf="@+id/tvLatitude"
        app:layout_constraintStart_toStartOf="@+id/tvLatitude"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

</androidx.constraintlayout.widget.ConstraintLayout>